--- a/block-BNaaft/event/views/eventForm.ejs
+++ b/block-BNaaft/event/views/eventForm.ejs
@@ -36,7 +36,12 @@
                     <input type="text" name="host" placeholder="Host">
                     <input type="date" name="startDate" placeholder="Start Date">
                     <input type="date" name="endDate" placeholder="End Date">
-                    <input type="text" name="category" placeholder=" category">
+                    <select name="category" >
+                      <option value="">category</option>
+                      <option value="programming">programming</option>
+                      <option value="sports">sports</option>
+                      <option value="trekking">trekking</option>
+                    </select>
                     <input type="text" name="location" placeholder="location">
                     <input type="submit" value="submit">
                 </form>
